--- a/styles.css
+++ b/styles.css
@@ -864,6 +864,47 @@ header h1 {
     .collectible-picker {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    /* Scale jar lids with container width so they fit in mobile/PWA viewports */
+    .jar-container.jar-classic .jar-lid {
+        width: 83%;
+    }
+
+    .jar-container.jar-classic .jar-lid::before {
+        width: calc(100% + 6px);
+    }
+
+    .jar-container.jar-round .jar-lid {
+        width: 41%;
+    }
+
+    .jar-container.jar-round .jar-lid::before {
+        width: calc(100% + 2px);
+    }
+
+    .jar-container.jar-tall .jar-lid {
+        width: 59%;
+    }
+
+    .jar-container.jar-tall .jar-lid::before {
+        width: calc(100% + 5px);
+    }
+
+    .jar-container.jar-wide .jar-lid {
+        width: 96%;
+    }
+
+    .jar-container.jar-wide .jar-lid::before {
+        width: calc(100% + 6px);
+    }
+
+    .jar-container.jar-heart .jar-lid {
+        width: 36%;
+    }
+
+    .jar-container.jar-heart .jar-lid::before {
+        width: calc(100% + 6px);
+    }
 }
 
 @media (max-width: 400px) {
